force-app/main/default/objects/Opportunity/fields/ADT__c.field-meta.xml
<CustomField>
    <fullName>ADT__c</fullName>
    <label>ADT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>