force-app/main/default/objects/Opportunity/fields/Estimated_Gaming_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gaming_Days__c</fullName>
    <label>Estimated Gaming Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>