force-app/main/default/objects/Opportunity/fields/Expected_Total_Guests__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Guests__c</fullName>
    <label>Expected Total Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>