force-app/main/default/objects/Opportunity/fields/Game_dominance__c.field-meta.xml
<CustomField>
    <fullName>Game_dominance__c</fullName>
    <label>Game dominance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>