force-app/main/default/objects/Opportunity/fields/Prior_12_month_Theo__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_month_Theo__c</fullName>
    <label>Prior 12 month Theo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>