force-app/main/default/objects/Opportunity/fields/Revenue_Expected__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Expected__c</fullName>
    <formula>ADT__c *  Estimated_Gaming_Days__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>