force-app/main/default/objects/Opportunity/listViews/All_Star_Opportunities_This_Month.listView-meta.xml
<ListView>
    <fullName>All_Star_Opportunities_This_Month</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Revenue_Expected__c</columns>
    <columns>Property__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Charlotte</value>
    </filters>
    <label>All Pipeline</label>
</ListView>