force-app/main/default/objects/Opportunity/listViews/International_All_Sales_Pipeline.listView-meta.xml
<ListView>
    <fullName>International_All_Sales_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Revenue_Expected__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
        <value>International</value>
    </filters>
    <label>International All Sales Pipeline</label>
    <sharedTo>
        <role>International</role>
        <role>VIP_Operations</role>
    </sharedTo>
</ListView>