force-app/main/default/objects/Opportunity/listViews/My_Pipeline_This_Next_Week.listView-meta.xml
<ListView>
    <fullName>My_Pipeline_This_Next_Week</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Revenue_Expected__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Estimated_Gaming_Days__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>NEXT_N_DAYS:10</value>
    </filters>
    <label>My Pipeline (This and Next Week)</label>
</ListView>