force-app/main/default/objects/Opportunity/listViews/Patron_s_expected_Next_30_days.listView-meta.xml
<ListView>
    <fullName>Patron_s_expected_Next_30_days</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Estimated_Gaming_Days__c</columns>
    <columns>Revenue_Expected__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Patron&apos;s expected (Next 30 days)</label>
</ListView>