force-app/main/default/objects/Opportunity/listViews/Pipelines_This_Month_and_Next_180_Days.listView-meta.xml
<ListView>
    <fullName>Pipelines_This_Month_and_Next_180_Days</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>TODAY,THIS_MONTH,NEXT_N_DAYS:180</value>
    </filters>
    <label>Pipelines - This Month and Next 180 Days</label>
</ListView>